# rusticle

./: .gitignore  ADAPTIVE_ENCODING_INTEGRATION.md  ADAPTIVE_FALLBACK_IMPLEMENTATION.md  AGENTS.md  Cargo.toml  ENCODE_AND_MEASURE_IMPLEMENTATION.md  LICENSE  README.md  bench_results.jsonl  manifest
benches/: benchmarks.rs  regression_bench.rs
crates/rusticle/: Cargo.toml
crates/rusticle-bench/: Cargo.toml
crates/rusticle-bench/src/: adaptive_comparison.rs  main.rs  tiered_eval.rs  voyager_repr_study.rs
crates/rusticle-cli/: Cargo.toml
crates/rusticle-cli/src/: adaptive_harness.rs  main.rs  voyager_study.rs
crates/rusticle/benches/: benchmarks.rs
crates/rusticle/examples/: analyze_voyager_corpus.rs  bench_imagequant_speed.rs  benchmark_transparent.rs  generate_samples.rs  profile_pipeline.rs  test_fast_path.rs  test_transparent_index.rs  verify_transparent_idx_value.rs  verify_transparent_index.rs
crates/rusticle/src/: adaptive_encode.rs  adaptive_fallback.rs  adaptive_ir.rs  analysis_kernels.rs  async_io.rs  candidate_gen.rs  classifier.rs  decode.rs  encode.rs  encode_and_measure.rs  error.rs  gif_ops.rs  image_compat.rs  lib.rs  lut_policy.rs  materialize.rs  optimize.rs  palette_lut.rs  palette_realize.rs  palette_strategy.rs  path_a.rs  path_a_palette.rs  path_b.rs  profiler.rs  quality.rs  repr_study.rs  resize.rs  scoring.rs  sequence_optimizer.rs  simd_opt.rs  tier0_classifier.rs  tier1_pruning.rs  tier2_measure.rs  tiered_optimizer.rs  two_path.rs  two_path_router.rs  types.rs  voyager_exact_bbox_global_palette.rs  voyager_exact_bbox_global_palette_with_fallback.rs  voyager_repr.rs  (+1 more)
crates/rusticle/src/quantize/: dither.rs  kmeans.rs  mod.rs  wu.rs
crates/rusticle/tests/: adaptive_bytes_regression.rs  adaptive_encoding_test.rs  adaptive_fallback_integration.rs  analysis_kernels_integration.rs  butteraugli_integration.rs  decode_test.rs  encode_and_measure_test.rs  integration.rs  lossy_corruption_test.rs  path_a_integration.rs  path_a_palette_integration.rs  tier2_measure_integration.rs  two_path_router_integration.rs  two_path_router_regression.rs  voyager_exact_bbox_global_palette_integration.rs  voyager_exact_bbox_global_palette_with_fallback_integration.rs  voyager_repr_integration.rs  voyager_source_reuse_integration.rs
crates/rusticle/tests/common/: mod.rs
docs/: ADAPTIVE_ENCODER_RESULTS.md  BENCHMARKS.md  BLOG_POST_OUTLINE.md  BUTTERAUGLI_TUNING_JOURNAL.md  CORPUS_DOWNLOADER.md  CORPUS_IMPLEMENTATION.md  LARGE_GIF_CORPUS_PIPELINE.md  QUALITY_INVESTIGATION_SUMMARY.md  RESEARCH_VOYAGER_AND_TWO_PATH.md  TUNING_RECOMMENDATION.md  TWO_PATH_OPTIMIZER_DECISION.md  VOYAGER_STUDY_CORRECTED_SPEC.md  WRITER_HANDOFF_NOTE.md  ba_thresholds.json  bench_baseline.json  tuning_guardrails.md  voyager_class_corpus.json
docs/research/: ADAPTIVE_ENCODER_ARCHITECTURE.md  ADAPTIVE_ENCODER_RESULTS.md  BUTTERAUGLI_TUNING_JOURNAL.md  CORPUS_IMPLEMENTATION.md  CUSTOM_QUANTIZER_EXPERIMENT_LOG.md  QUANTIZER_BLOG_SOURCE_PACKET.md  QUANTIZER_DECISION_LADDER.md  TUNING_RECOMMENDATION.md  TWO_PATH_OPTIMIZER_DECISION.md  VOYAGER_STUDY_CORRECTED_SPEC.md  tuning_guardrails.md
examples/: bench_palette_lut.rs  debug_fast_path.rs  debug_transparency.rs  profile_encode.rs  test_fast_path.rs
scripts/: analyze_disposal_fix.py  analyze_global_coarse_sweep.py  benchmark_holdout_profiles.py  benchmark_two_path_router.py  check_benchmark_baseline.py  corpus_downloader.py  corpus_split.json  derive_ba_thresholds.py  disposal_fix_offender_retest.py  download_holdout_gifs.py  download_test_gifs.py  evaluate_corpus_quality.py  generate_corpus_split.py  run_tuning_sweep.py  voyager_subframe_fix_retest.py
src/: decode.rs  encode.rs  error.rs  lib.rs  main.rs  optimize.rs  palette_lut.rs  quality.rs  resize.rs  security.rs  simd_opt.rs  types.rs
tests/: decode_test.rs  integration.rs
tests/common/: mod.rs
