[package]
name = "rusticle"
version = "0.1.0"
edition = "2021"

[dependencies]
gif = "0.13"
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "io-util"], optional = true }
color_quant = "1.1"
fast_image_resize = "5"
rayon = "1.10"

[dev-dependencies]
criterion = "0.5"

[features]
default = []
async = ["tokio"]

[[bench]]
name = "benchmarks"
harness = false
