[workspace]
resolver = "2"
members = [
    "crates/rusticle",
    "crates/rusticle-bench",
    "crates/rusticle-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/geverding/rusticle"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
