[package]
name = "rusticle-cli"
version.workspace = true
edition.workspace = true
description = "High-performance GIF resize and optimization CLI"

[[bin]]
name = "rusticle"
path = "src/main.rs"

[dependencies]
rusticle = { path = "../rusticle", features = ["butteraugli", "serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
imagequant = "4"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
