[package]
name = "rusticle-cli"
version.workspace = true
edition.workspace = true
description = "High-performance GIF resize and optimization CLI"

[[bin]]
name = "rusticle"
path = "src/main.rs"

[features]
default = ["with-imagequant"]
with-imagequant = ["rusticle/imagequant", "dep:imagequant"]

[dependencies]
rusticle = { path = "../rusticle", default-features = false, features = ["butteraugli", "serde", "research", "simd"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
imagequant = { version = "4", optional = true }
gif = "0.13"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
