[package]
name = "rusticle"
version.workspace = true
edition.workspace = true

[dependencies]
gif = "0.13"
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "io-util"], optional = true }
imagequant = "4"
fast_image_resize = "5"
rayon = "1.10"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5"
exoquant = "0.2"

[features]
default = []
async = ["tokio"]
serde = ["dep:serde"]

[[bench]]
name = "benchmarks"
harness = false
